Set absolute path

--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Mirror image</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/interactive/style.css">
 </head>
 
 <body>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="/interactive/index.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
         <div id="button_container">
